--- a/design_classes.css
+++ b/design_classes.css
@@ -45,7 +45,7 @@ clickme.active {
     color: white;
 }
 
-clickme:hover {
+clickme:hover:not(.active) {
     background-color: #333;
     color: white;
 }
